// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TanstackAwsStack synth lifecycle behavior > matches public-safe snapshot for ephemeral stage 1`] = `
{
  "Outputs": {
    "WebappWebappApiEndpoint07AED432": {
      "Value": {
        "Fn::Join": [
          "",
          [
            "https://",
            {
              "Ref": "WebappWebappApiB14AA291",
            },
            ".execute-api.us-east-2.",
            {
              "Ref": "AWS::URLSuffix",
            },
            "/",
            {
              "Ref": "WebappWebappApiDeploymentStageprod12A47CC5",
            },
            "/",
          ],
        ],
      },
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756C2048MiB8AA4A604": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756C2048MiBServiceRoleDefaultPolicy5D765796",
        "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756C2048MiBServiceRoleB37F9ACF",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": "<cdk-bootstrap-role>",
          "S3Key": "<hash>.zip",
        },
        "Environment": {
          "Variables": {
            "AWS_CA_BUNDLE": "/etc/pki/ca-trust/extracted/pem/tls-ca-bundle.pem",
          },
        },
        "Handler": "index.handler",
        "Layers": [
          {
            "Ref": "WebappWebappAssetsDeploymentApiGwAssetBucketDeploymentAwsCliLayerA289C85F",
          },
        ],
        "MemorySize": 2048,
        "Role": {
          "Fn::GetAtt": [
            "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756C2048MiBServiceRoleB37F9ACF",
            "Arn",
          ],
        },
        "Runtime": "python3.13",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
      "UpdateReplacePolicy": "Delete",
    },
    "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756C2048MiBServiceRoleB37F9ACF": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
      "UpdateReplacePolicy": "Delete",
    },
    "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756C2048MiBServiceRoleDefaultPolicy5D765796": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::<cdk-bootstrap-role>",
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::<cdk-bootstrap-role>/*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
                "s3:DeleteObject*",
                "s3:PutObject",
                "s3:PutObjectLegalHold",
                "s3:PutObjectRetention",
                "s3:PutObjectTagging",
                "s3:PutObjectVersionTagging",
                "s3:Abort*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "WebappWebappAssetsBucket4C4B6678",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "WebappWebappAssetsBucket4C4B6678",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": [
                "cloudfront:GetInvalidation",
                "cloudfront:CreateInvalidation",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
            {
              "Action": "kms:Decrypt",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition",
                    },
                    ":kms:us-east-2:<account-id>:key/1234abcd-12ab-34cd-56ef-1234567890ab",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756C2048MiBServiceRoleDefaultPolicy5D765796",
        "Roles": [
          {
            "Ref": "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756C2048MiBServiceRoleB37F9ACF",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
      "UpdateReplacePolicy": "Delete",
    },
    "CustomS3AutoDeleteObjectsCustomResourceProviderHandler9D90184F": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": "<cdk-bootstrap-role>",
          "S3Key": "<hash>.zip",
        },
        "Description": {
          "Fn::Join": [
            "",
            [
              "Lambda function for auto-deleting objects in ",
              {
                "Ref": "WebappWebappAssetsBucket4C4B6678",
              },
              " S3 bucket.",
            ],
          ],
        },
        "Handler": "index.handler",
        "MemorySize": 128,
        "Role": {
          "Fn::GetAtt": [
            "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092",
            "Arn",
          ],
        },
        "Runtime": "nodejs22.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
      "UpdateReplacePolicy": "Delete",
    },
    "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Sub": "arn:\${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
      "UpdateReplacePolicy": "Delete",
    },
    "WebappDatabasePersonsE2E33589": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "AttributeDefinitions": [
          {
            "AttributeName": "pk",
            "AttributeType": "S",
          },
          {
            "AttributeName": "sk",
            "AttributeType": "S",
          },
          {
            "AttributeName": "gsi1pk",
            "AttributeType": "S",
          },
          {
            "AttributeName": "gsi1sk",
            "AttributeType": "S",
          },
        ],
        "BillingMode": "PAY_PER_REQUEST",
        "GlobalSecondaryIndexes": [
          {
            "IndexName": "GSI1",
            "KeySchema": [
              {
                "AttributeName": "gsi1pk",
                "KeyType": "HASH",
              },
              {
                "AttributeName": "gsi1sk",
                "KeyType": "RANGE",
              },
            ],
            "Projection": {
              "ProjectionType": "ALL",
            },
          },
        ],
        "KeySchema": [
          {
            "AttributeName": "pk",
            "KeyType": "HASH",
          },
          {
            "AttributeName": "sk",
            "KeyType": "RANGE",
          },
        ],
        "StreamSpecification": {
          "StreamViewType": "NEW_AND_OLD_IMAGES",
        },
      },
      "Type": "AWS::DynamoDB::Table",
      "UpdateReplacePolicy": "Delete",
    },
    "WebappDatabaseTodos39DA962E": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "AttributeDefinitions": [
          {
            "AttributeName": "pk",
            "AttributeType": "S",
          },
          {
            "AttributeName": "sk",
            "AttributeType": "S",
          },
        ],
        "BillingMode": "PAY_PER_REQUEST",
        "KeySchema": [
          {
            "AttributeName": "pk",
            "KeyType": "HASH",
          },
          {
            "AttributeName": "sk",
            "KeyType": "RANGE",
          },
        ],
      },
      "Type": "AWS::DynamoDB::Table",
      "UpdateReplacePolicy": "Delete",
    },
    "WebappEventsTableEventsC49DFB5F": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "AttributeDefinitions": [
          {
            "AttributeName": "pk",
            "AttributeType": "S",
          },
          {
            "AttributeName": "sk",
            "AttributeType": "S",
          },
        ],
        "BillingMode": "PAY_PER_REQUEST",
        "KeySchema": [
          {
            "AttributeName": "pk",
            "KeyType": "HASH",
          },
          {
            "AttributeName": "sk",
            "KeyType": "RANGE",
          },
        ],
        "TimeToLiveSpecification": {
          "AttributeName": "ttl",
          "Enabled": true,
        },
      },
      "Type": "AWS::DynamoDB::Table",
      "UpdateReplacePolicy": "Delete",
    },
    "WebappStreamToEventsProcessor21303591": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "WebappStreamToEventsProcessorServiceRoleDefaultPolicyB4B3285F",
        "WebappStreamToEventsProcessorServiceRole48848DFA",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": "<cdk-bootstrap-role>",
          "S3Key": "<hash>.zip",
        },
        "Environment": {
          "Variables": {
            "EVENTS_TABLE": {
              "Ref": "WebappEventsTableEventsC49DFB5F",
            },
          },
        },
        "Handler": "index.handler",
        "MemorySize": 256,
        "ReservedConcurrentExecutions": 10,
        "Role": {
          "Fn::GetAtt": [
            "WebappStreamToEventsProcessorServiceRole48848DFA",
            "Arn",
          ],
        },
        "Runtime": "nodejs22.x",
        "Timeout": 30,
      },
      "Type": "AWS::Lambda::Function",
      "UpdateReplacePolicy": "Delete",
    },
    "WebappStreamToEventsProcessorDynamoDBEventSourceTanstackAwsStackfeaturemainWebappDatabasePersons0521A346CBB69D64": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "BatchSize": 100,
        "BisectBatchOnFunctionError": true,
        "EventSourceArn": {
          "Fn::GetAtt": [
            "WebappDatabasePersonsE2E33589",
            "StreamArn",
          ],
        },
        "FunctionName": {
          "Ref": "WebappStreamToEventsProcessor21303591",
        },
        "MaximumBatchingWindowInSeconds": 1,
        "MaximumRetryAttempts": 3,
        "StartingPosition": "LATEST",
      },
      "Type": "AWS::Lambda::EventSourceMapping",
      "UpdateReplacePolicy": "Delete",
    },
    "WebappStreamToEventsProcessorServiceRole48848DFA": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
      "UpdateReplacePolicy": "Delete",
    },
    "WebappStreamToEventsProcessorServiceRoleDefaultPolicyB4B3285F": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "dynamodb:BatchWriteItem",
                "dynamodb:PutItem",
                "dynamodb:UpdateItem",
                "dynamodb:DeleteItem",
                "dynamodb:DescribeTable",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "WebappEventsTableEventsC49DFB5F",
                    "Arn",
                  ],
                },
              ],
            },
            {
              "Action": "dynamodb:ListStreams",
              "Effect": "Allow",
              "Resource": "*",
            },
            {
              "Action": [
                "dynamodb:DescribeStream",
                "dynamodb:GetRecords",
                "dynamodb:GetShardIterator",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "WebappDatabasePersonsE2E33589",
                  "StreamArn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "WebappStreamToEventsProcessorServiceRoleDefaultPolicyB4B3285F",
        "Roles": [
          {
            "Ref": "WebappStreamToEventsProcessorServiceRole48848DFA",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
      "UpdateReplacePolicy": "Delete",
    },
    "WebappWebappApiANYApiPermissionTanstackAwsStackfeaturemainWebappWebappApi8F796B10ANY1457C1CD": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "WebappWebappServerE8C21AC2",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:us-east-2:<account-id>:",
              {
                "Ref": "WebappWebappApiB14AA291",
              },
              "/",
              {
                "Ref": "WebappWebappApiDeploymentStageprod12A47CC5",
              },
              "/*/",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
      "UpdateReplacePolicy": "Delete",
    },
    "WebappWebappApiANYApiPermissionTestTanstackAwsStackfeaturemainWebappWebappApi8F796B10ANYB74A0D93": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "WebappWebappServerE8C21AC2",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:us-east-2:<account-id>:",
              {
                "Ref": "WebappWebappApiB14AA291",
              },
              "/test-invoke-stage/*/",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
      "UpdateReplacePolicy": "Delete",
    },
    "WebappWebappApiANYF7D9FCDB": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "AuthorizationType": "NONE",
        "HttpMethod": "ANY",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "ResponseTransferMode": "STREAM",
          "TimeoutInMillis": 120000,
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:us-east-2:lambda:path/2021-11-15/functions/",
                {
                  "Fn::GetAtt": [
                    "WebappWebappServerE8C21AC2",
                    "Arn",
                  ],
                },
                "/response-streaming-invocations",
              ],
            ],
          },
        },
        "ResourceId": {
          "Fn::GetAtt": [
            "WebappWebappApiB14AA291",
            "RootResourceId",
          ],
        },
        "RestApiId": {
          "Ref": "WebappWebappApiB14AA291",
        },
      },
      "Type": "AWS::ApiGateway::Method",
      "UpdateReplacePolicy": "Delete",
    },
    "WebappWebappApiAccount21A918EF": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "WebappWebappApiB14AA291",
      ],
      "Properties": {
        "CloudWatchRoleArn": {
          "Fn::GetAtt": [
            "WebappWebappApiCloudWatchRoleB2CCB037",
            "Arn",
          ],
        },
      },
      "Type": "AWS::ApiGateway::Account",
      "UpdateReplacePolicy": "Delete",
    },
    "WebappWebappApiB14AA291": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "EndpointConfiguration": {
          "Types": [
            "REGIONAL",
          ],
        },
        "Name": "WebappApi",
      },
      "Type": "AWS::ApiGateway::RestApi",
      "UpdateReplacePolicy": "Delete",
    },
    "WebappWebappApiCloudWatchRoleB2CCB037": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "apigateway.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AmazonAPIGatewayPushToCloudWatchLogs",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
      "UpdateReplacePolicy": "Delete",
    },
    "WebappWebappApiDeploymentA8528C95d2cc37f787faa0c0de118346817d2b2e": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "WebappWebappApiproxyANY62EA5684",
        "WebappWebappApiproxyFCBB5D2E",
        "WebappWebappApiANYF7D9FCDB",
      ],
      "Metadata": {
        "aws:cdk:do-not-refactor": true,
      },
      "Properties": {
        "Description": "Automatically created by the RestApi construct",
        "RestApiId": {
          "Ref": "WebappWebappApiB14AA291",
        },
      },
      "Type": "AWS::ApiGateway::Deployment",
      "UpdateReplacePolicy": "Delete",
    },
    "WebappWebappApiDeploymentStageprod12A47CC5": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "WebappWebappApiAccount21A918EF",
      ],
      "Properties": {
        "AccessLogSetting": {
          "DestinationArn": {
            "Fn::GetAtt": [
              "WebappWebappApiWebappApiLogGroup35657D1A",
              "Arn",
            ],
          },
          "Format": "{"requestId":"$context.requestId","ip":"$context.identity.sourceIp","user":"$context.identity.user","requestTime":"$context.requestTime","httpMethod":"$context.httpMethod","resourcePath":"$context.resourcePath","status":"$context.status","protocol":"$context.protocol","responseLength":"$context.responseLength"}",
        },
        "DeploymentId": {
          "Ref": "WebappWebappApiDeploymentA8528C95d2cc37f787faa0c0de118346817d2b2e",
        },
        "MethodSettings": [
          {
            "DataTraceEnabled": true,
            "HttpMethod": "*",
            "LoggingLevel": "INFO",
            "MetricsEnabled": true,
            "ResourcePath": "/*",
            "ThrottlingBurstLimit": 500,
            "ThrottlingRateLimit": 1000,
          },
        ],
        "RestApiId": {
          "Ref": "WebappWebappApiB14AA291",
        },
        "StageName": "prod",
        "TracingEnabled": true,
      },
      "Type": "AWS::ApiGateway::Stage",
      "UpdateReplacePolicy": "Delete",
    },
    "WebappWebappApiWebappApiLogGroup35657D1A": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "RetentionInDays": 731,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Delete",
    },
    "WebappWebappApiproxyANY62EA5684": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "AuthorizationType": "NONE",
        "HttpMethod": "ANY",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "ResponseTransferMode": "STREAM",
          "TimeoutInMillis": 120000,
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:us-east-2:lambda:path/2021-11-15/functions/",
                {
                  "Fn::GetAtt": [
                    "WebappWebappServerE8C21AC2",
                    "Arn",
                  ],
                },
                "/response-streaming-invocations",
              ],
            ],
          },
        },
        "ResourceId": {
          "Ref": "WebappWebappApiproxyFCBB5D2E",
        },
        "RestApiId": {
          "Ref": "WebappWebappApiB14AA291",
        },
      },
      "Type": "AWS::ApiGateway::Method",
      "UpdateReplacePolicy": "Delete",
    },
    "WebappWebappApiproxyANYApiPermissionTanstackAwsStackfeaturemainWebappWebappApi8F796B10ANYproxyCEB801F5": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "WebappWebappServerE8C21AC2",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:us-east-2:<account-id>:",
              {
                "Ref": "WebappWebappApiB14AA291",
              },
              "/",
              {
                "Ref": "WebappWebappApiDeploymentStageprod12A47CC5",
              },
              "/*/*",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
      "UpdateReplacePolicy": "Delete",
    },
    "WebappWebappApiproxyANYApiPermissionTestTanstackAwsStackfeaturemainWebappWebappApi8F796B10ANYproxy275B4D3E": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "WebappWebappServerE8C21AC2",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:us-east-2:<account-id>:",
              {
                "Ref": "WebappWebappApiB14AA291",
              },
              "/test-invoke-stage/*/*",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
      "UpdateReplacePolicy": "Delete",
    },
    "WebappWebappApiproxyFCBB5D2E": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "ParentId": {
          "Fn::GetAtt": [
            "WebappWebappApiB14AA291",
            "RootResourceId",
          ],
        },
        "PathPart": "{proxy+}",
        "RestApiId": {
          "Ref": "WebappWebappApiB14AA291",
        },
      },
      "Type": "AWS::ApiGateway::Resource",
      "UpdateReplacePolicy": "Delete",
    },
    "WebappWebappAssetsBucket4C4B6678": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "Tags": [
          {
            "Key": "aws-cdk:auto-delete-objects",
            "Value": "true",
          },
          {
            "Key": "aws-cdk:cr-owned:be8deebe",
            "Value": "true",
          },
        ],
      },
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Delete",
    },
    "WebappWebappAssetsBucketAutoDeleteObjectsCustomResource834CBE1B": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "WebappWebappAssetsBucketPolicyADD6CF8D",
      ],
      "Properties": {
        "BucketName": "<redacted-name>",
        "ServiceToken": {
          "Fn::GetAtt": [
            "CustomS3AutoDeleteObjectsCustomResourceProviderHandler9D90184F",
            "Arn",
          ],
        },
      },
      "Type": "Custom::S3AutoDeleteObjects",
      "UpdateReplacePolicy": "Delete",
    },
    "WebappWebappAssetsBucketPolicyADD6CF8D": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "Bucket": {
          "Ref": "WebappWebappAssetsBucket4C4B6678",
        },
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "s3:GetObject",
              "Condition": {
                "StringEquals": {
                  "AWS:SourceArn": {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":cloudfront::",
                        {
                          "Ref": "AWS::AccountId",
                        },
                        ":distribution/",
                        {
                          "Ref": "WebappWebappDistributionApiGwDistributionD3EAFE8E",
                        },
                      ],
                    ],
                  },
                },
              },
              "Effect": "Allow",
              "Principal": {
                "Service": "cloudfront.amazonaws.com",
              },
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    {
                      "Fn::GetAtt": [
                        "WebappWebappAssetsBucket4C4B6678",
                        "Arn",
                      ],
                    },
                    "/*",
                  ],
                ],
              },
            },
            {
              "Action": [
                "s3:PutBucketPolicy",
                "s3:GetBucket*",
                "s3:List*",
                "s3:DeleteObject*",
              ],
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::GetAtt": [
                    "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092",
                    "Arn",
                  ],
                },
              },
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "WebappWebappAssetsBucket4C4B6678",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "WebappWebappAssetsBucket4C4B6678",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::S3::BucketPolicy",
      "UpdateReplacePolicy": "Delete",
    },
    "WebappWebappAssetsDeploymentApiGwAssetBucketDeploymentAwsCliLayerA289C85F": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "Content": {
          "S3Bucket": "<cdk-bootstrap-role>",
          "S3Key": "<hash>.zip",
        },
        "Description": "/opt/awscli/aws",
      },
      "Type": "AWS::Lambda::LayerVersion",
      "UpdateReplacePolicy": "Delete",
    },
    "WebappWebappAssetsDeploymentApiGwAssetBucketDeploymentCustomResource2048MiB0D010CFC": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "DestinationBucketName": {
          "Ref": "WebappWebappAssetsBucket4C4B6678",
        },
        "DistributionId": {
          "Ref": "WebappWebappDistributionApiGwDistributionD3EAFE8E",
        },
        "DistributionPaths": [
          "/*",
        ],
        "OutputObjectKeys": true,
        "Prune": true,
        "ServiceToken": {
          "Fn::GetAtt": [
            "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756C2048MiB8AA4A604",
            "Arn",
          ],
        },
        "SourceBucketNames": [
          "<cdk-bootstrap-role>",
        ],
        "SourceObjectKeys": [
          "<hash>.zip",
        ],
        "WaitForDistributionInvalidation": true,
      },
      "Type": "Custom::CDKBucketDeployment",
      "UpdateReplacePolicy": "Delete",
    },
    "WebappWebappDistributionApiGwDistributionD3EAFE8E": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "DistributionConfig": {
          "CacheBehaviors": [
            {
              "CachePolicyId": "658327ea-f89d-4fab-a63d-7e88639e58f6",
              "Compress": true,
              "PathPattern": "/assets/*",
              "TargetOriginId": "TanstackAwsStackfeaturemainWebappWebappDistributionApiGwDistributionOrigin21973FD38",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "CachePolicyId": "658327ea-f89d-4fab-a63d-7e88639e58f6",
              "Compress": true,
              "PathPattern": "/favicon.ico",
              "TargetOriginId": "TanstackAwsStackfeaturemainWebappWebappDistributionApiGwDistributionOrigin21973FD38",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "CachePolicyId": "658327ea-f89d-4fab-a63d-7e88639e58f6",
              "Compress": true,
              "PathPattern": "/images/*",
              "TargetOriginId": "TanstackAwsStackfeaturemainWebappWebappDistributionApiGwDistributionOrigin21973FD38",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
          ],
          "Comment": "apiGw",
          "DefaultCacheBehavior": {
            "AllowedMethods": [
              "GET",
              "HEAD",
              "OPTIONS",
              "PUT",
              "PATCH",
              "POST",
              "DELETE",
            ],
            "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
            "Compress": false,
            "OriginRequestPolicyId": "b689b0a8-53d0-40ab-baf2-68738e2966ac",
            "ResponseHeadersPolicyId": "67f7725c-6f97-4210-82d7-5512b31e9d03",
            "TargetOriginId": "TanstackAwsStackfeaturemainWebappWebappDistributionApiGwDistributionOrigin172AEBD3A",
            "ViewerProtocolPolicy": "redirect-to-https",
          },
          "Enabled": true,
          "HttpVersion": "http3",
          "IPV6Enabled": true,
          "Origins": [
            {
              "CustomOriginConfig": {
                "OriginProtocolPolicy": "https-only",
                "OriginSSLProtocols": [
                  "TLSv1.2",
                ],
              },
              "DomainName": "<redacted-name>",
              "Id": "TanstackAwsStackfeaturemainWebappWebappDistributionApiGwDistributionOrigin172AEBD3A",
              "OriginPath": {
                "Fn::Join": [
                  "",
                  [
                    "/",
                    {
                      "Fn::Select": [
                        3,
                        {
                          "Fn::Split": [
                            "/",
                            {
                              "Fn::Join": [
                                "",
                                [
                                  "https://",
                                  {
                                    "Ref": "WebappWebappApiB14AA291",
                                  },
                                  ".execute-api.us-east-2.",
                                  {
                                    "Ref": "AWS::URLSuffix",
                                  },
                                  "/",
                                  {
                                    "Ref": "WebappWebappApiDeploymentStageprod12A47CC5",
                                  },
                                  "/",
                                ],
                              ],
                            },
                          ],
                        },
                      ],
                    },
                  ],
                ],
              },
            },
            {
              "DomainName": "<redacted-name>",
              "Id": "TanstackAwsStackfeaturemainWebappWebappDistributionApiGwDistributionOrigin21973FD38",
              "OriginAccessControlId": {
                "Fn::GetAtt": [
                  "WebappWebappDistributionApiGwDistributionOrigin2S3OriginAccessControlE7B46614",
                  "Id",
                ],
              },
              "S3OriginConfig": {
                "OriginAccessIdentity": "",
              },
            },
          ],
        },
      },
      "Type": "AWS::CloudFront::Distribution",
      "UpdateReplacePolicy": "Delete",
    },
    "WebappWebappDistributionApiGwDistributionOrigin2S3OriginAccessControlE7B46614": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "OriginAccessControlConfig": {
          "Name": "TanstackAwsStackfeaturemainWOrigin2S3OriginAccessControlF02EE478",
          "OriginAccessControlOriginType": "s3",
          "SigningBehavior": "always",
          "SigningProtocol": "sigv4",
        },
      },
      "Type": "AWS::CloudFront::OriginAccessControl",
      "UpdateReplacePolicy": "Delete",
    },
    "WebappWebappServerE8C21AC2": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "WebappWebappServerServiceRoleDefaultPolicyCF344E6F",
        "WebappWebappServerServiceRole39A03241",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": "<cdk-bootstrap-role>",
          "S3Key": "<hash>.zip",
        },
        "Environment": {
          "Variables": {
            "DDB_PERSONS_TABLE_NAME": {
              "Ref": "WebappDatabasePersonsE2E33589",
            },
            "DDB_TODOS_TABLE_NAME": {
              "Ref": "WebappDatabaseTodos39DA962E",
            },
            "EVENTS_TABLE": {
              "Ref": "WebappEventsTableEventsC49DFB5F",
            },
          },
        },
        "Handler": "index.handler",
        "MemorySize": 2048,
        "ReservedConcurrentExecutions": 100,
        "Role": {
          "Fn::GetAtt": [
            "WebappWebappServerServiceRole39A03241",
            "Arn",
          ],
        },
        "Runtime": "nodejs24.x",
        "Tags": [
          {
            "Key": "IsWebAppServer",
            "Value": "true",
          },
        ],
        "Timeout": 120,
        "TracingConfig": {
          "Mode": "Active",
        },
      },
      "Type": "AWS::Lambda::Function",
      "UpdateReplacePolicy": "Delete",
    },
    "WebappWebappServerFunctionUrlEB1718A7": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "AuthType": "AWS_IAM",
        "InvokeMode": "RESPONSE_STREAM",
        "TargetFunctionArn": {
          "Fn::GetAtt": [
            "WebappWebappServerE8C21AC2",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Url",
      "UpdateReplacePolicy": "Delete",
    },
    "WebappWebappServerServiceRole39A03241": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "IsWebAppServer",
            "Value": "true",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
      "UpdateReplacePolicy": "Delete",
    },
    "WebappWebappServerServiceRoleDefaultPolicyCF344E6F": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "xray:PutTraceSegments",
                "xray:PutTelemetryRecords",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
            {
              "Action": [
                "bedrock:InvokeModel",
                "bedrock:InvokeModelWithResponseStream",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
            {
              "Action": [
                "cloudwatch:GetMetricStatistics",
                "cloudwatch:ListMetrics",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
            {
              "Action": [
                "dynamodb:BatchGetItem",
                "dynamodb:Query",
                "dynamodb:GetItem",
                "dynamodb:Scan",
                "dynamodb:ConditionCheckItem",
                "dynamodb:BatchWriteItem",
                "dynamodb:PutItem",
                "dynamodb:UpdateItem",
                "dynamodb:DeleteItem",
                "dynamodb:DescribeTable",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "WebappDatabaseTodos39DA962E",
                    "Arn",
                  ],
                },
              ],
            },
            {
              "Action": [
                "dynamodb:GetRecords",
                "dynamodb:GetShardIterator",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "WebappDatabaseTodos39DA962E",
                    "Arn",
                  ],
                },
              ],
            },
            {
              "Action": [
                "dynamodb:BatchGetItem",
                "dynamodb:Query",
                "dynamodb:GetItem",
                "dynamodb:Scan",
                "dynamodb:ConditionCheckItem",
                "dynamodb:BatchWriteItem",
                "dynamodb:PutItem",
                "dynamodb:UpdateItem",
                "dynamodb:DeleteItem",
                "dynamodb:DescribeTable",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "WebappDatabasePersonsE2E33589",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "WebappDatabasePersonsE2E33589",
                          "Arn",
                        ],
                      },
                      "/index/*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": [
                "dynamodb:GetRecords",
                "dynamodb:GetShardIterator",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "WebappDatabasePersonsE2E33589",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "WebappDatabasePersonsE2E33589",
                          "Arn",
                        ],
                      },
                      "/index/*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": [
                "dynamodb:BatchGetItem",
                "dynamodb:Query",
                "dynamodb:GetItem",
                "dynamodb:Scan",
                "dynamodb:ConditionCheckItem",
                "dynamodb:DescribeTable",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "WebappEventsTableEventsC49DFB5F",
                    "Arn",
                  ],
                },
              ],
            },
            {
              "Action": [
                "dynamodb:GetRecords",
                "dynamodb:GetShardIterator",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "WebappEventsTableEventsC49DFB5F",
                    "Arn",
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "WebappWebappServerServiceRoleDefaultPolicyCF344E6F",
        "Roles": [
          {
            "Ref": "WebappWebappServerServiceRole39A03241",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
      "UpdateReplacePolicy": "Delete",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`TanstackAwsStack synth lifecycle behavior > matches public-safe snapshot for permanent stage 1`] = `
{
  "Outputs": {
    "WebappWebappApiEndpoint07AED432": {
      "Value": {
        "Fn::Join": [
          "",
          [
            "https://",
            {
              "Ref": "WebappWebappApiB14AA291",
            },
            ".execute-api.us-east-2.",
            {
              "Ref": "AWS::URLSuffix",
            },
            "/",
            {
              "Ref": "WebappWebappApiDeploymentStageprod12A47CC5",
            },
            "/",
          ],
        ],
      },
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "AWS679f53fac002430cb0da5b7982bd22872D164C4C": {
      "DependsOn": [
        "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": "<cdk-bootstrap-role>",
          "S3Key": "<hash>.zip",
        },
        "Handler": "index.handler",
        "Role": {
          "Fn::GetAtt": [
            "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2",
            "Arn",
          ],
        },
        "Runtime": "nodejs22.x",
        "Timeout": 120,
      },
      "Type": "AWS::Lambda::Function",
    },
    "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756C2048MiB8AA4A604": {
      "DependsOn": [
        "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756C2048MiBServiceRoleDefaultPolicy5D765796",
        "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756C2048MiBServiceRoleB37F9ACF",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": "<cdk-bootstrap-role>",
          "S3Key": "<hash>.zip",
        },
        "Environment": {
          "Variables": {
            "AWS_CA_BUNDLE": "/etc/pki/ca-trust/extracted/pem/tls-ca-bundle.pem",
          },
        },
        "Handler": "index.handler",
        "Layers": [
          {
            "Ref": "WebappWebappAssetsDeploymentApiGwAssetBucketDeploymentAwsCliLayerA289C85F",
          },
        ],
        "MemorySize": 2048,
        "Role": {
          "Fn::GetAtt": [
            "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756C2048MiBServiceRoleB37F9ACF",
            "Arn",
          ],
        },
        "Runtime": "python3.13",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756C2048MiBServiceRoleB37F9ACF": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756C2048MiBServiceRoleDefaultPolicy5D765796": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::<cdk-bootstrap-role>",
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::<cdk-bootstrap-role>/*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
                "s3:DeleteObject*",
                "s3:PutObject",
                "s3:PutObjectLegalHold",
                "s3:PutObjectRetention",
                "s3:PutObjectTagging",
                "s3:PutObjectVersionTagging",
                "s3:Abort*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "WebappWebappAssetsBucket4C4B6678",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "WebappWebappAssetsBucket4C4B6678",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": [
                "cloudfront:GetInvalidation",
                "cloudfront:CreateInvalidation",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
            {
              "Action": "kms:Decrypt",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition",
                    },
                    ":kms:us-east-2:<account-id>:key/1234abcd-12ab-34cd-56ef-1234567890ab",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756C2048MiBServiceRoleDefaultPolicy5D765796",
        "Roles": [
          {
            "Ref": "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756C2048MiBServiceRoleB37F9ACF",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "WebappDatabasePersonsE2E33589": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "AttributeDefinitions": [
          {
            "AttributeName": "pk",
            "AttributeType": "S",
          },
          {
            "AttributeName": "sk",
            "AttributeType": "S",
          },
          {
            "AttributeName": "gsi1pk",
            "AttributeType": "S",
          },
          {
            "AttributeName": "gsi1sk",
            "AttributeType": "S",
          },
        ],
        "BillingMode": "PAY_PER_REQUEST",
        "GlobalSecondaryIndexes": [
          {
            "IndexName": "GSI1",
            "KeySchema": [
              {
                "AttributeName": "gsi1pk",
                "KeyType": "HASH",
              },
              {
                "AttributeName": "gsi1sk",
                "KeyType": "RANGE",
              },
            ],
            "Projection": {
              "ProjectionType": "ALL",
            },
          },
        ],
        "KeySchema": [
          {
            "AttributeName": "pk",
            "KeyType": "HASH",
          },
          {
            "AttributeName": "sk",
            "KeyType": "RANGE",
          },
        ],
        "StreamSpecification": {
          "StreamViewType": "NEW_AND_OLD_IMAGES",
        },
      },
      "Type": "AWS::DynamoDB::Table",
      "UpdateReplacePolicy": "Retain",
    },
    "WebappDatabaseTodos39DA962E": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "AttributeDefinitions": [
          {
            "AttributeName": "pk",
            "AttributeType": "S",
          },
          {
            "AttributeName": "sk",
            "AttributeType": "S",
          },
        ],
        "BillingMode": "PAY_PER_REQUEST",
        "KeySchema": [
          {
            "AttributeName": "pk",
            "KeyType": "HASH",
          },
          {
            "AttributeName": "sk",
            "KeyType": "RANGE",
          },
        ],
      },
      "Type": "AWS::DynamoDB::Table",
      "UpdateReplacePolicy": "Retain",
    },
    "WebappEventsTableEventsC49DFB5F": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "AttributeDefinitions": [
          {
            "AttributeName": "pk",
            "AttributeType": "S",
          },
          {
            "AttributeName": "sk",
            "AttributeType": "S",
          },
        ],
        "BillingMode": "PAY_PER_REQUEST",
        "KeySchema": [
          {
            "AttributeName": "pk",
            "KeyType": "HASH",
          },
          {
            "AttributeName": "sk",
            "KeyType": "RANGE",
          },
        ],
        "TimeToLiveSpecification": {
          "AttributeName": "ttl",
          "Enabled": true,
        },
      },
      "Type": "AWS::DynamoDB::Table",
      "UpdateReplacePolicy": "Retain",
    },
    "WebappStreamToEventsProcessor21303591": {
      "DependsOn": [
        "WebappStreamToEventsProcessorServiceRoleDefaultPolicyB4B3285F",
        "WebappStreamToEventsProcessorServiceRole48848DFA",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": "<cdk-bootstrap-role>",
          "S3Key": "<hash>.zip",
        },
        "Environment": {
          "Variables": {
            "EVENTS_TABLE": {
              "Ref": "WebappEventsTableEventsC49DFB5F",
            },
          },
        },
        "Handler": "index.handler",
        "MemorySize": 256,
        "ReservedConcurrentExecutions": 10,
        "Role": {
          "Fn::GetAtt": [
            "WebappStreamToEventsProcessorServiceRole48848DFA",
            "Arn",
          ],
        },
        "Runtime": "nodejs22.x",
        "Timeout": 30,
      },
      "Type": "AWS::Lambda::Function",
    },
    "WebappStreamToEventsProcessorDynamoDBEventSourceTanstackAwsStackmainWebappDatabasePersonsB9F7D887328F8082": {
      "Properties": {
        "BatchSize": 100,
        "BisectBatchOnFunctionError": true,
        "EventSourceArn": {
          "Fn::GetAtt": [
            "WebappDatabasePersonsE2E33589",
            "StreamArn",
          ],
        },
        "FunctionName": {
          "Ref": "WebappStreamToEventsProcessor21303591",
        },
        "MaximumBatchingWindowInSeconds": 1,
        "MaximumRetryAttempts": 3,
        "StartingPosition": "LATEST",
      },
      "Type": "AWS::Lambda::EventSourceMapping",
    },
    "WebappStreamToEventsProcessorServiceRole48848DFA": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "WebappStreamToEventsProcessorServiceRoleDefaultPolicyB4B3285F": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "dynamodb:BatchWriteItem",
                "dynamodb:PutItem",
                "dynamodb:UpdateItem",
                "dynamodb:DeleteItem",
                "dynamodb:DescribeTable",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "WebappEventsTableEventsC49DFB5F",
                    "Arn",
                  ],
                },
              ],
            },
            {
              "Action": "dynamodb:ListStreams",
              "Effect": "Allow",
              "Resource": "*",
            },
            {
              "Action": [
                "dynamodb:DescribeStream",
                "dynamodb:GetRecords",
                "dynamodb:GetShardIterator",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "WebappDatabasePersonsE2E33589",
                  "StreamArn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "WebappStreamToEventsProcessorServiceRoleDefaultPolicyB4B3285F",
        "Roles": [
          {
            "Ref": "WebappStreamToEventsProcessorServiceRole48848DFA",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "WebappWebappApiANYApiPermissionTanstackAwsStackmainWebappWebappApiEC787BFEANY4AB0A9B2": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "WebappWebappServerE8C21AC2",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:us-east-2:<account-id>:",
              {
                "Ref": "WebappWebappApiB14AA291",
              },
              "/",
              {
                "Ref": "WebappWebappApiDeploymentStageprod12A47CC5",
              },
              "/*/",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "WebappWebappApiANYApiPermissionTestTanstackAwsStackmainWebappWebappApiEC787BFEANY908842EA": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "WebappWebappServerE8C21AC2",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:us-east-2:<account-id>:",
              {
                "Ref": "WebappWebappApiB14AA291",
              },
              "/test-invoke-stage/*/",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "WebappWebappApiANYF7D9FCDB": {
      "Properties": {
        "AuthorizationType": "NONE",
        "HttpMethod": "ANY",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "ResponseTransferMode": "STREAM",
          "TimeoutInMillis": 120000,
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:us-east-2:lambda:path/2021-11-15/functions/",
                {
                  "Fn::GetAtt": [
                    "WebappWebappServerE8C21AC2",
                    "Arn",
                  ],
                },
                "/response-streaming-invocations",
              ],
            ],
          },
        },
        "ResourceId": {
          "Fn::GetAtt": [
            "WebappWebappApiB14AA291",
            "RootResourceId",
          ],
        },
        "RestApiId": {
          "Ref": "WebappWebappApiB14AA291",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "WebappWebappApiAccount21A918EF": {
      "DeletionPolicy": "Retain",
      "DependsOn": [
        "WebappWebappApiB14AA291",
      ],
      "Properties": {
        "CloudWatchRoleArn": {
          "Fn::GetAtt": [
            "WebappWebappApiCloudWatchRoleB2CCB037",
            "Arn",
          ],
        },
      },
      "Type": "AWS::ApiGateway::Account",
      "UpdateReplacePolicy": "Retain",
    },
    "WebappWebappApiB14AA291": {
      "Properties": {
        "EndpointConfiguration": {
          "Types": [
            "REGIONAL",
          ],
        },
        "Name": "WebappApi",
      },
      "Type": "AWS::ApiGateway::RestApi",
    },
    "WebappWebappApiCloudWatchRoleB2CCB037": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "apigateway.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AmazonAPIGatewayPushToCloudWatchLogs",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
      "UpdateReplacePolicy": "Retain",
    },
    "WebappWebappApiDeploymentA8528C95b5cc8a27a9b4f9205a5a3ccbef590d16": {
      "DependsOn": [
        "WebappWebappApiproxyANY62EA5684",
        "WebappWebappApiproxyFCBB5D2E",
        "WebappWebappApiANYF7D9FCDB",
      ],
      "Metadata": {
        "aws:cdk:do-not-refactor": true,
      },
      "Properties": {
        "Description": "Automatically created by the RestApi construct",
        "RestApiId": {
          "Ref": "WebappWebappApiB14AA291",
        },
      },
      "Type": "AWS::ApiGateway::Deployment",
    },
    "WebappWebappApiDeploymentStageprod12A47CC5": {
      "DependsOn": [
        "WebappWebappApiAccount21A918EF",
      ],
      "Properties": {
        "AccessLogSetting": {
          "DestinationArn": {
            "Fn::GetAtt": [
              "WebappWebappApiWebappApiLogGroup35657D1A",
              "Arn",
            ],
          },
          "Format": "{"requestId":"$context.requestId","ip":"$context.identity.sourceIp","user":"$context.identity.user","requestTime":"$context.requestTime","httpMethod":"$context.httpMethod","resourcePath":"$context.resourcePath","status":"$context.status","protocol":"$context.protocol","responseLength":"$context.responseLength"}",
        },
        "DeploymentId": {
          "Ref": "WebappWebappApiDeploymentA8528C95b5cc8a27a9b4f9205a5a3ccbef590d16",
        },
        "MethodSettings": [
          {
            "DataTraceEnabled": true,
            "HttpMethod": "*",
            "LoggingLevel": "INFO",
            "MetricsEnabled": true,
            "ResourcePath": "/*",
            "ThrottlingBurstLimit": 500,
            "ThrottlingRateLimit": 1000,
          },
        ],
        "RestApiId": {
          "Ref": "WebappWebappApiB14AA291",
        },
        "StageName": "prod",
        "TracingEnabled": true,
      },
      "Type": "AWS::ApiGateway::Stage",
    },
    "WebappWebappApiWebappApiLogGroup35657D1A": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "RetentionInDays": 731,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Delete",
    },
    "WebappWebappApiproxyANY62EA5684": {
      "Properties": {
        "AuthorizationType": "NONE",
        "HttpMethod": "ANY",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "ResponseTransferMode": "STREAM",
          "TimeoutInMillis": 120000,
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:us-east-2:lambda:path/2021-11-15/functions/",
                {
                  "Fn::GetAtt": [
                    "WebappWebappServerE8C21AC2",
                    "Arn",
                  ],
                },
                "/response-streaming-invocations",
              ],
            ],
          },
        },
        "ResourceId": {
          "Ref": "WebappWebappApiproxyFCBB5D2E",
        },
        "RestApiId": {
          "Ref": "WebappWebappApiB14AA291",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "WebappWebappApiproxyANYApiPermissionTanstackAwsStackmainWebappWebappApiEC787BFEANYproxy6861EAA2": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "WebappWebappServerE8C21AC2",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:us-east-2:<account-id>:",
              {
                "Ref": "WebappWebappApiB14AA291",
              },
              "/",
              {
                "Ref": "WebappWebappApiDeploymentStageprod12A47CC5",
              },
              "/*/*",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "WebappWebappApiproxyANYApiPermissionTestTanstackAwsStackmainWebappWebappApiEC787BFEANYproxy91963553": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "WebappWebappServerE8C21AC2",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:us-east-2:<account-id>:",
              {
                "Ref": "WebappWebappApiB14AA291",
              },
              "/test-invoke-stage/*/*",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "WebappWebappApiproxyFCBB5D2E": {
      "Properties": {
        "ParentId": {
          "Fn::GetAtt": [
            "WebappWebappApiB14AA291",
            "RootResourceId",
          ],
        },
        "PathPart": "{proxy+}",
        "RestApiId": {
          "Ref": "WebappWebappApiB14AA291",
        },
      },
      "Type": "AWS::ApiGateway::Resource",
    },
    "WebappWebappAssetsBucket4C4B6678": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "Tags": [
          {
            "Key": "aws-cdk:cr-owned:bcdeb642",
            "Value": "true",
          },
        ],
      },
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Retain",
    },
    "WebappWebappAssetsBucketPolicyADD6CF8D": {
      "Properties": {
        "Bucket": {
          "Ref": "WebappWebappAssetsBucket4C4B6678",
        },
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "s3:GetObject",
              "Condition": {
                "StringEquals": {
                  "AWS:SourceArn": {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":cloudfront::",
                        {
                          "Ref": "AWS::AccountId",
                        },
                        ":distribution/",
                        {
                          "Ref": "WebappWebappDistributionApiGwDistributionD3EAFE8E",
                        },
                      ],
                    ],
                  },
                },
              },
              "Effect": "Allow",
              "Principal": {
                "Service": "cloudfront.amazonaws.com",
              },
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    {
                      "Fn::GetAtt": [
                        "WebappWebappAssetsBucket4C4B6678",
                        "Arn",
                      ],
                    },
                    "/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::S3::BucketPolicy",
    },
    "WebappWebappAssetsDeploymentApiGwAssetBucketDeploymentAwsCliLayerA289C85F": {
      "Properties": {
        "Content": {
          "S3Bucket": "<cdk-bootstrap-role>",
          "S3Key": "<hash>.zip",
        },
        "Description": "/opt/awscli/aws",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
    "WebappWebappAssetsDeploymentApiGwAssetBucketDeploymentCustomResource2048MiB0D010CFC": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "DestinationBucketName": {
          "Ref": "WebappWebappAssetsBucket4C4B6678",
        },
        "DistributionId": {
          "Ref": "WebappWebappDistributionApiGwDistributionD3EAFE8E",
        },
        "DistributionPaths": [
          "/*",
        ],
        "OutputObjectKeys": true,
        "Prune": true,
        "ServiceToken": {
          "Fn::GetAtt": [
            "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756C2048MiB8AA4A604",
            "Arn",
          ],
        },
        "SourceBucketNames": [
          "<cdk-bootstrap-role>",
        ],
        "SourceObjectKeys": [
          "<hash>.zip",
        ],
        "WaitForDistributionInvalidation": true,
      },
      "Type": "Custom::CDKBucketDeployment",
      "UpdateReplacePolicy": "Delete",
    },
    "WebappWebappDistributionApiGwDistributionD3EAFE8E": {
      "Properties": {
        "DistributionConfig": {
          "CacheBehaviors": [
            {
              "CachePolicyId": "658327ea-f89d-4fab-a63d-7e88639e58f6",
              "Compress": true,
              "PathPattern": "/assets/*",
              "TargetOriginId": "TanstackAwsStackmainWebappWebappDistributionApiGwDistributionOrigin2F6BB2949",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "CachePolicyId": "658327ea-f89d-4fab-a63d-7e88639e58f6",
              "Compress": true,
              "PathPattern": "/favicon.ico",
              "TargetOriginId": "TanstackAwsStackmainWebappWebappDistributionApiGwDistributionOrigin2F6BB2949",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "CachePolicyId": "658327ea-f89d-4fab-a63d-7e88639e58f6",
              "Compress": true,
              "PathPattern": "/images/*",
              "TargetOriginId": "TanstackAwsStackmainWebappWebappDistributionApiGwDistributionOrigin2F6BB2949",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
          ],
          "Comment": "apiGw",
          "DefaultCacheBehavior": {
            "AllowedMethods": [
              "GET",
              "HEAD",
              "OPTIONS",
              "PUT",
              "PATCH",
              "POST",
              "DELETE",
            ],
            "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
            "Compress": false,
            "OriginRequestPolicyId": "b689b0a8-53d0-40ab-baf2-68738e2966ac",
            "ResponseHeadersPolicyId": "67f7725c-6f97-4210-82d7-5512b31e9d03",
            "TargetOriginId": "TanstackAwsStackmainWebappWebappDistributionApiGwDistributionOrigin1FBA64A49",
            "ViewerProtocolPolicy": "redirect-to-https",
          },
          "Enabled": true,
          "HttpVersion": "http3",
          "IPV6Enabled": true,
          "Origins": [
            {
              "CustomOriginConfig": {
                "OriginProtocolPolicy": "https-only",
                "OriginSSLProtocols": [
                  "TLSv1.2",
                ],
              },
              "DomainName": "<redacted-name>",
              "Id": "TanstackAwsStackmainWebappWebappDistributionApiGwDistributionOrigin1FBA64A49",
              "OriginPath": {
                "Fn::Join": [
                  "",
                  [
                    "/",
                    {
                      "Fn::Select": [
                        3,
                        {
                          "Fn::Split": [
                            "/",
                            {
                              "Fn::Join": [
                                "",
                                [
                                  "https://",
                                  {
                                    "Ref": "WebappWebappApiB14AA291",
                                  },
                                  ".execute-api.us-east-2.",
                                  {
                                    "Ref": "AWS::URLSuffix",
                                  },
                                  "/",
                                  {
                                    "Ref": "WebappWebappApiDeploymentStageprod12A47CC5",
                                  },
                                  "/",
                                ],
                              ],
                            },
                          ],
                        },
                      ],
                    },
                  ],
                ],
              },
            },
            {
              "DomainName": "<redacted-name>",
              "Id": "TanstackAwsStackmainWebappWebappDistributionApiGwDistributionOrigin2F6BB2949",
              "OriginAccessControlId": {
                "Fn::GetAtt": [
                  "WebappWebappDistributionApiGwDistributionOrigin2S3OriginAccessControlE7B46614",
                  "Id",
                ],
              },
              "S3OriginConfig": {
                "OriginAccessIdentity": "",
              },
            },
          ],
          "WebACLId": {
            "Fn::GetAtt": [
              "WebappWebappDistributionApiGwExistingDistributionWebAclLookup4BC3A3EB",
              "Distribution.DistributionConfig.WebACLId",
            ],
          },
        },
      },
      "Type": "AWS::CloudFront::Distribution",
    },
    "WebappWebappDistributionApiGwDistributionOrigin2S3OriginAccessControlE7B46614": {
      "Properties": {
        "OriginAccessControlConfig": {
          "Name": "TanstackAwsStackmainWebappWeOrigin2S3OriginAccessControl58424989",
          "OriginAccessControlOriginType": "s3",
          "SigningBehavior": "always",
          "SigningProtocol": "sigv4",
        },
      },
      "Type": "AWS::CloudFront::OriginAccessControl",
    },
    "WebappWebappDistributionApiGwExistingDistributionIdLookup66A5B141": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "WebappWebappDistributionApiGwExistingDistributionIdLookupCustomResourcePolicyB33866DE",
      ],
      "Properties": {
        "Create": "{"service":"CloudFormation","action":"describeStackResource","parameters":{"StackName":"TanstackAwsStack-main","LogicalResourceId":"WebappWebappDistributionApiGwDistributionD3EAFE8E"},"outputPaths":["StackResourceDetail.PhysicalResourceId"],"physicalResourceId":{"id":"existing-distribution-id-WebappWebappDistributionApiGwDistributionD3EAFE8E-<nonce>"}}",
        "InstallLatestAwsSdk": true,
        "ServiceToken": {
          "Fn::GetAtt": [
            "AWS679f53fac002430cb0da5b7982bd22872D164C4C",
            "Arn",
          ],
        },
        "Update": "{"service":"CloudFormation","action":"describeStackResource","parameters":{"StackName":"TanstackAwsStack-main","LogicalResourceId":"WebappWebappDistributionApiGwDistributionD3EAFE8E"},"outputPaths":["StackResourceDetail.PhysicalResourceId"],"physicalResourceId":{"id":"existing-distribution-id-WebappWebappDistributionApiGwDistributionD3EAFE8E-<nonce>"}}",
      },
      "Type": "Custom::AWS",
      "UpdateReplacePolicy": "Delete",
    },
    "WebappWebappDistributionApiGwExistingDistributionIdLookupCustomResourcePolicyB33866DE": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "cloudformation:DescribeStackResource",
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "WebappWebappDistributionApiGwExistingDistributionIdLookupCustomResourcePolicyB33866DE",
        "Roles": [
          {
            "Ref": "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "WebappWebappDistributionApiGwExistingDistributionWebAclLookup4BC3A3EB": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "WebappWebappDistributionApiGwExistingDistributionWebAclLookupCustomResourcePolicy6F91C7BA",
      ],
      "Properties": {
        "Create": {
          "Fn::Join": [
            "",
            [
              "{"service":"CloudFront","action":"getDistribution","parameters":{"Id":"",
              {
                "Fn::GetAtt": [
                  "WebappWebappDistributionApiGwExistingDistributionIdLookup66A5B141",
                  "StackResourceDetail.PhysicalResourceId",
                ],
              },
              ""},"outputPaths":["Distribution.DistributionConfig.WebACLId"],"physicalResourceId":{"id":"existing-distribution-webacl-WebappWebappDistributionApiGwDistributionD3EAFE8E-<nonce>"}}",
            ],
          ],
        },
        "InstallLatestAwsSdk": true,
        "ServiceToken": {
          "Fn::GetAtt": [
            "AWS679f53fac002430cb0da5b7982bd22872D164C4C",
            "Arn",
          ],
        },
        "Update": {
          "Fn::Join": [
            "",
            [
              "{"service":"CloudFront","action":"getDistribution","parameters":{"Id":"",
              {
                "Fn::GetAtt": [
                  "WebappWebappDistributionApiGwExistingDistributionIdLookup66A5B141",
                  "StackResourceDetail.PhysicalResourceId",
                ],
              },
              ""},"outputPaths":["Distribution.DistributionConfig.WebACLId"],"physicalResourceId":{"id":"existing-distribution-webacl-WebappWebappDistributionApiGwDistributionD3EAFE8E-<nonce>"}}",
            ],
          ],
        },
      },
      "Type": "Custom::AWS",
      "UpdateReplacePolicy": "Delete",
    },
    "WebappWebappDistributionApiGwExistingDistributionWebAclLookupCustomResourcePolicy6F91C7BA": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "cloudfront:GetDistribution",
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "WebappWebappDistributionApiGwExistingDistributionWebAclLookupCustomResourcePolicy6F91C7BA",
        "Roles": [
          {
            "Ref": "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "WebappWebappServerE8C21AC2": {
      "DependsOn": [
        "WebappWebappServerServiceRoleDefaultPolicyCF344E6F",
        "WebappWebappServerServiceRole39A03241",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": "<cdk-bootstrap-role>",
          "S3Key": "<hash>.zip",
        },
        "Environment": {
          "Variables": {
            "DDB_PERSONS_TABLE_NAME": {
              "Ref": "WebappDatabasePersonsE2E33589",
            },
            "DDB_TODOS_TABLE_NAME": {
              "Ref": "WebappDatabaseTodos39DA962E",
            },
            "EVENTS_TABLE": {
              "Ref": "WebappEventsTableEventsC49DFB5F",
            },
          },
        },
        "Handler": "index.handler",
        "MemorySize": 2048,
        "ReservedConcurrentExecutions": 100,
        "Role": {
          "Fn::GetAtt": [
            "WebappWebappServerServiceRole39A03241",
            "Arn",
          ],
        },
        "Runtime": "nodejs24.x",
        "Tags": [
          {
            "Key": "IsWebAppServer",
            "Value": "true",
          },
        ],
        "Timeout": 120,
        "TracingConfig": {
          "Mode": "Active",
        },
      },
      "Type": "AWS::Lambda::Function",
    },
    "WebappWebappServerFunctionUrlEB1718A7": {
      "Properties": {
        "AuthType": "AWS_IAM",
        "InvokeMode": "RESPONSE_STREAM",
        "TargetFunctionArn": {
          "Fn::GetAtt": [
            "WebappWebappServerE8C21AC2",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Url",
    },
    "WebappWebappServerServiceRole39A03241": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "IsWebAppServer",
            "Value": "true",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "WebappWebappServerServiceRoleDefaultPolicyCF344E6F": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "xray:PutTraceSegments",
                "xray:PutTelemetryRecords",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
            {
              "Action": [
                "bedrock:InvokeModel",
                "bedrock:InvokeModelWithResponseStream",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
            {
              "Action": [
                "cloudwatch:GetMetricStatistics",
                "cloudwatch:ListMetrics",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
            {
              "Action": [
                "dynamodb:BatchGetItem",
                "dynamodb:Query",
                "dynamodb:GetItem",
                "dynamodb:Scan",
                "dynamodb:ConditionCheckItem",
                "dynamodb:BatchWriteItem",
                "dynamodb:PutItem",
                "dynamodb:UpdateItem",
                "dynamodb:DeleteItem",
                "dynamodb:DescribeTable",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "WebappDatabaseTodos39DA962E",
                    "Arn",
                  ],
                },
              ],
            },
            {
              "Action": [
                "dynamodb:GetRecords",
                "dynamodb:GetShardIterator",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "WebappDatabaseTodos39DA962E",
                    "Arn",
                  ],
                },
              ],
            },
            {
              "Action": [
                "dynamodb:BatchGetItem",
                "dynamodb:Query",
                "dynamodb:GetItem",
                "dynamodb:Scan",
                "dynamodb:ConditionCheckItem",
                "dynamodb:BatchWriteItem",
                "dynamodb:PutItem",
                "dynamodb:UpdateItem",
                "dynamodb:DeleteItem",
                "dynamodb:DescribeTable",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "WebappDatabasePersonsE2E33589",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "WebappDatabasePersonsE2E33589",
                          "Arn",
                        ],
                      },
                      "/index/*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": [
                "dynamodb:GetRecords",
                "dynamodb:GetShardIterator",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "WebappDatabasePersonsE2E33589",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "WebappDatabasePersonsE2E33589",
                          "Arn",
                        ],
                      },
                      "/index/*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": [
                "dynamodb:BatchGetItem",
                "dynamodb:Query",
                "dynamodb:GetItem",
                "dynamodb:Scan",
                "dynamodb:ConditionCheckItem",
                "dynamodb:DescribeTable",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "WebappEventsTableEventsC49DFB5F",
                    "Arn",
                  ],
                },
              ],
            },
            {
              "Action": [
                "dynamodb:GetRecords",
                "dynamodb:GetShardIterator",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "WebappEventsTableEventsC49DFB5F",
                    "Arn",
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "WebappWebappServerServiceRoleDefaultPolicyCF344E6F",
        "Roles": [
          {
            "Ref": "WebappWebappServerServiceRole39A03241",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;
